--- a/server code/package.json
+++ b/server code/package.json
@@ -29,6 +29,7 @@
     "etag": "^1.8.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.17.3",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
