--- a/server code/.env
+++ b/server code/.env
@@ -2,4 +2,4 @@ pokeServerPORT=3000
 authServerPORT= 6001
 ACCESS_TOKEN_SECRET="hello"
 REFRESH_TOKEN_SECRET="hello1"
-DB_STRING="mongodb+srv://nimratpreet:nimrat@cluster0.wlaz9kx.mongodb.net/?retryWrites=true&w=majority"
+DB_STRING="mongodb://127.0.0.1/test"
